# meal-planner-backend

./: .gitignore  Cargo.toml  Rocket.toml
.zed/: settings.json
mpb.db/: IDENTITY  LOG  LOG.old.1729167433925303  LOG.old.1729167754210121  LOG.old.1729168304547152  MANIFEST-000023
src/: auth.rs  dishes.rs  ingredients.rs  lib.rs  main.rs  pantry.rs  users.rs
