[package]
name = "mpb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
rocket = { version = "0.5.1", features = ["json"] }
polodb_core = "5.1.2"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = "1.0.210"
log = "0.4"
pretty_env_logger = "0.4"
chrono = "0.4.38"
